[gd_scene load_steps=5 format=4 uid="uid://jbbnsatkmp33"]

[ext_resource type="Script" path="res://script/MAP/Sand_fighting.gd" id="1_0b5na"]
[ext_resource type="TileSet" uid="uid://qvoo4h8a5sei" path="res://scene/MAP/Sand_fighting.tres" id="2_hiidb"]
[ext_resource type="PackedScene" uid="uid://3vbgdh3x0pe3" path="res://scene/player.tscn" id="3_c03uk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5dvmp"]

[node name="Sand_fighting" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0b5na")

[node name="TileMap" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Ground" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAHAAUAAAABAAUAAAAHAAQAAAABAAQAAAAHAAMAAAABAAQAAAAHAAIAAAABAAQAAAAHAAEAAAABAAIAAAAHAAAAAAABAAIAAAAHAP//AAABAAMAAAAHAP7/AAABAAIAAAAHAP3/AAAFAAIAAAAHAPz/AAAFAAAAAAAGAAUAAAADAAUAAAAGAAQAAAADAAIAAAAGAAMAAAADAAIAAAAGAAIAAAABAAMAAAAGAAEAAAABAAQAAAAGAAAAAAACAAQAAAAGAP//AAAFAAIAAAAGAP7/AAABAAIAAAAGAP3/AAABAAQAAAAGAPz/AAABAAAAAAAFAAUAAAACAAUAAAAFAAQAAAADAAIAAAAFAAMAAAAFAAIAAAAFAAIAAAADAAQAAAAFAAEAAAADAAMAAAAFAAAAAAACAAMAAAAFAP//AAACAAEAAAAFAP7/AAACAAQAAAAFAP3/AAACAAMAAAAFAPz/AAAFAAAAAAAEAAUAAAADAAUAAAAEAAQAAAABAAIAAAAEAAMAAAADAAIAAAAEAAIAAAADAAIAAAAEAAEAAAACAAIAAAAEAAAAAAAEAAIAAAAEAP//AAABAAIAAAAEAP7/AAAEAAMAAAAEAP3/AAADAAMAAAAEAPz/AAAEAAAAAAADAAUAAAABAAUAAAADAAQAAAADAAIAAAADAAMAAAACAAMAAAADAAIAAAABAAQAAAADAAEAAAAEAAIAAAADAAAAAAABAAQAAAADAP//AAACAAEAAAADAP7/AAADAAQAAAADAP3/AAADAAIAAAADAPz/AAAEAAEAAAACAAUAAAADAAUAAAACAAQAAAABAAEAAAACAAMAAAABAAEAAAACAAIAAAACAAMAAAACAAEAAAADAAMAAAACAAAAAAABAAIAAAACAP//AAABAAQAAAACAP7/AAAEAAMAAAACAP3/AAACAAMAAAACAPz/AAACAAAAAAABAAUAAAAEAAUAAAABAAQAAAACAAEAAAABAAMAAAAEAAMAAAABAAIAAAABAAEAAAABAAEAAAAEAAMAAAABAAAAAAABAAEAAAABAP//AAACAAQAAAABAP7/AAADAAIAAAABAP3/AAAFAAIAAAABAPz/AAAEAAAAAAAAAAUAAAADAAUAAAAAAAQAAAABAAQAAAAAAAMAAAACAAIAAAAAAAIAAAACAAMAAAAAAAEAAAACAAEAAAAAAAAAAAABAAEAAAAAAP//AAABAAMAAAAAAP7/AAABAAMAAAAAAP3/AAADAAMAAAAAAPz/AAAEAAAAAAD//wUAAAABAAUAAAD//wQAAAABAAIAAAD//wMAAAABAAEAAAD//wIAAAABAAQAAAD//wEAAAACAAQAAAD//wAAAAAEAAIAAAD/////AAADAAIAAAD///7/AAACAAMAAAD///3/AAADAAMAAAD///z/AAAEAAAAAAD+/wUAAAABAAUAAAD+/wQAAAACAAEAAAD+/wMAAAACAAQAAAD+/wIAAAADAAIAAAD+/wEAAAABAAMAAAD+/wAAAAABAAEAAAD+////AAAFAAIAAAD+//7/AAABAAQAAAD+//3/AAADAAMAAAD+//z/AAACAAAAAAD9/wUAAAADAAUAAAD9/wQAAAABAAQAAAD9/wMAAAACAAEAAAD9/wIAAAABAAEAAAD9/wEAAAADAAQAAAD9/wAAAAACAAMAAAD9////AAABAAIAAAD9//7/AAAFAAIAAAD9//3/AAADAAIAAAD9//z/AAAEAAAAAAD8/wUAAAADAAUAAAD8/wQAAAAEAAIAAAD8/wMAAAAFAAIAAAD8/wIAAAABAAMAAAD8/wEAAAABAAEAAAD8/wAAAAAFAAIAAAD8////AAABAAEAAAD8//7/AAADAAIAAAD8//3/AAADAAMAAAD8//z/AAACAAAAAAD7/wUAAAABAAUAAAD7/wQAAAADAAQAAAD7/wMAAAAEAAMAAAD7/wIAAAACAAEAAAD7/wEAAAABAAIAAAD7/wAAAAACAAIAAAD7////AAACAAMAAAD7//7/AAACAAMAAAD7//3/AAAFAAIAAAD7//z/AAACAAAAAAD6/wUAAAABAAUAAAD6/wQAAAADAAQAAAD6/wMAAAADAAQAAAD6/wIAAAABAAQAAAD6/wEAAAABAAMAAAD6/wAAAAACAAEAAAD6////AAABAAMAAAD6//7/AAABAAMAAAD6//3/AAAFAAIAAAD6//z/AAACAAAAAAD5/wUAAAABAAUAAAD5/wQAAAAEAAMAAAD5/wMAAAACAAEAAAD5/wIAAAADAAQAAAD5/wEAAAADAAMAAAD5/wAAAAAEAAIAAAD5////AAACAAEAAAD5//7/AAADAAQAAAD5//3/AAADAAMAAAD5//z/AAACAAAAAAAIAAIAAAAFAAMAAAAIAAUAAAAFAAUAAAAIAAQAAAAFAAMAAAAIAAMAAAAFAAMAAAAIAAEAAAAFAAMAAAAIAAAAAAAFAAMAAAAIAP//AAAFAAMAAAAIAP7/AAAFAAMAAAAIAP3/AAAFAAMAAAAIAPz/AAADAAAAAAD4/wUAAAAAAAUAAAD4/wQAAAAAAAMAAAD4/wMAAAAAAAIAAAD4/wIAAAAAAAMAAAD4/wEAAAAAAAIAAAD4/wAAAAAAAAMAAAD4////AAAAAAEAAAD4//7/AAAAAAEAAAD4//3/AAAAAAEAAAD4//z/AAAAAAAAAAA=")
tile_set = ExtResource("2_hiidb")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, -8)
shape = SubResource("RectangleShape2D_5dvmp")

[node name="player" parent="." instance=ExtResource("3_c03uk")]
collision_mask = 2

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
